--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
+    "recoil-persist": "^4.2.0",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
