--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "recoil": "^0.7.6",
     "recoil-persist": "^4.2.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
