--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "start": "set \"GENERATE_SOURCEMAP=false\" && react-scripts start",
     "build": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
